--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -70,3 +70,9 @@ jobs:
       run: bundle exec bin/rails db:create db:migrate RAILS_ENV=test
     - name: Run tests
       run: bundle exec rspec
+    - name: SimpleCov+ Action
+      uses: joshmfrankel/simplecov-check-action@1.0.0
+      with:
+        minimum_suite_coverage: 70
+        minimum_file_coverage: 70
+        github_token: ${{ secrets.GITHUB_TOKEN }}
