--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   DATABASE_URL: postgres://postgres:test@127.0.0.1:5432/test
+  MAILERSEND_API_TOKEN: ${{ secrets.MAILERSEND_API_TOKEN }}
 jobs:
   rubocop:
     runs-on: ubuntu-latest
